Enh - added Roboto Font
Corrected path for credit card fond
Fix overflow in HTML

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             </div>
             <div class="flex-h-between">
                 <select class="form-control" style="width:40%;" id="exp-month">
+                    <option>- -</option>
                     <option>January</option>
                     <option>February</option>
                     <option>March</option>
@@ -44,6 +45,7 @@
                     <option>December</option>
                 </select>
                 <select class="form-control" style="width:30%;" id="exp-year">
+                    <option>- -</option>
                     <option>2016</option>
                     <option>2017</option>
                     <option>2018</option>
@@ -51,7 +53,7 @@
                     <option>2020</option>
                     <option>2021</option>
                 </select>
-                <input class="form-control" type="text" style="width:26%;" placeholder="ex: 1234" name="cvc-code" id="cvc"/>
+                <input class="form-control" type="text" style="width:26%;" placeholder="ex: 123" name="cvc-code" id="cvc"/>
             </div>
         </div>
     </div>
